package ca.shahrestani.ali.edu.vanier.businesslogic;

public abstract class Account {
}
