package ca.shahrestani.ali.edu.vanier.businesslogic;

public class BudgetAccount extends Account {
}
