package ca.shahrestani.ali.edu.vanier.businesslogic;

public class SystemAdministrator extends User {
}
