package ca.shahrestani.ali.edu.vanier.businesslogic;

public class Transaction {
}
