package ca.shahrestani.ali.edu.vanier.businesslogic;

public enum UserType {
    ORGANIZER,
    TREASURER,
    SYSTEM_ADMINISTRATOR
}
